# photowall

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  app.py  app_conf.py  app_conf_example.py  conf.py  docker-compose.yaml  docker-python.yml  gigawall.ps1  pelemele.js  printed.py  requirement.txt  requirements.txt  setup.cfg  start.cmd  start_dev.cmd  start_example.cmd
archive/: printed.py
mosaic/: api-wall.html  api-wall.py  pele-mele.py  pelemele.js
photowall/: .dockerignore  .env.example  Makefile  Pipfile  README.md  app.py  test.py
photowall/templates/: admin.html  index.html  upload.html
screen-saver/: Pipfile  screen-saver.py  ss.py
scripts/: auto_start.cmd  start_dev.sh
templates/: admin.html  canvas.js  index.html  index2.html  upload.html
