[metadata]
name = gigawall
url = https://gitlab.com/dc/photowall
description = A project with Flask to upload image

[options]
packages = gigawall
install_requires =
    flask
    qrcode
    Pillow
    loguru

tests_require =
    diff-cover
    factory-boy
    pytest
    pytest-cov
    pytest-env
    pytest-factoryboy
    pytest-pylint
    pytest-vcr

[tool:pytest]

